# peregrine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dependencies.cmake  genStrict.bat
.github/workflows/: unit-tests.yml
apps/demo/: CMakeLists.txt
benchmark-suite/: CMakeLists.txt
benchmark-suite/src/: SampleBenchmark.cpp
benchmarks/: CMakeLists.txt
benchmarks/peregrine/: CMakeLists.txt  SnapTo.cpp
benchmarks/src/: SampleBenchmark.cpp
cmake/: ASan.cmake  ClangFormat.cmake  ClangTidy.cmake  Dependencies.cmake  Doxygen.cmake  StrictMode.cmake  dependencies.cmake
demo/: CMakeLists.txt
demo/src/: Main.cpp
include/: CMakeLists.txt
include/demo/: CMakeLists.txt
include/peregrine/: CMakeLists.txt  DoxygenGroups.h  Peregrine.cmake
include/peregrine/allocators/: Allocators.cmake  Arena.h  Arena.tpp  Policy.h  Stack.h  Stack.tpp  StackType.h  StoragePolicy.h  TempArena.h
include/peregrine/telemetry/: ArenaTelemetry.h  ArenaTelemetry.tpp  StackTelemetry.h  StackTelemetry.tpp  Telemetry.cmake
include/peregrine/utils/: Constants.h  Preprocessors.h  Utilities.h  Utils.cmake
memory-manager/: CMakeLists.txt
memory-manager/include/: DoxygenGroups.h
memory-manager/include/allocators/: Arena.h  Arena.tpp  TempArena.h  TempArena.tpp
memory-manager/include/peregrine/allocators/: Stack.h  Stack.tpp  TempArena.h
memory-manager/include/peregrine/telemetry/: ArenaTelemetry.h
memory-manager/include/telemetry/: ArenaTelemetry.h  ArenaTelemetry.tpp
memory-manager/include/utils/: Constants.h
scripts/: genNoStrict.bat  genStrict.bat
src/: CMakeLists.txt
src/demo/: CMakeLists.txt
src/demo/src/: Main.cpp
src/pmm/: CMakeLists.txt
src/pmm/include/: DoxygenGroups.h
src/pmm/include/peregrine/allocators/: Arena.h  Arena.tpp  Stack.tpp  TempArena.h  TempArena.tpp
src/pmm/include/peregrine/telemetry/: ArenaTelemetry.h  ArenaTelemetry.tpp
src/pmm/include/peregrine/utils/: Utilities.h
test-suite/: CMakeLists.txt
test-suite/include/: DoxygenGroups.h  Utils.h
test-suite/src/: ConstantTests.cpp  SampleTest.cpp
test-suite/src/allocators/: ArenaTests.cpp  StackTests.cpp  TempArenaTests.cpp
test-suite/src/telemetry/: ArenaTelemetryTests.cpp
tests/: CMakeLists.txt
tests/include/: DoxygenGroups.h  Mocks.h  Utils.h
tests/peregrine/: CMakeLists.txt
tests/peregrine/allocators/: ArenaTests.cpp  CMakeLists.txt  StackTests.cpp
tests/peregrine/allocators/stack/: StackMemoryManagementTests.cpp
tests/peregrine/allocators/stacks/: LooseStackTests.cpp  StackMemoryManagementTests.cpp  StrictStackTests.cpp
tests/peregrine/telemetry/: CMakeLists.txt  StackTelemetryTests.cpp
tests/pmm/: CMakeLists.txt
tests/pmm/include/: DoxygenGroups.h  Utils.h
tests/pmm/src/: ConstantTests.cpp
tests/pmm/src/allocators/: ArenaTests.cpp  CMakeLists.txt  TempArenaTests.cpp
tests/pmm/src/telemetry/: CMakeLists.txt
